--- a/index.html.html
+++ b/index.html.html
@@ -26,7 +26,7 @@
   <!-- Add your site or application content here -->
   <div class='container'>
     <div class='row navigation fixed line'>
-      <div class='col-md-4'><img src="..\html5-boilerplate_v6.1.0\img\The Modernist.png"></div>
+      <div class='col-md-4'><img src="img\The Modernist.png"></div>
       <div class='col-md-8'> 
           <ul stylesheet="display: inline;">
               <li> <a href="#" >Home</a></li>
@@ -46,32 +46,32 @@
                 <p><a class="btn btn-primary btn-lg" href="#" role="button">Read More Here &raquo;</a></p>
             </div>
             <div class="col-md-4 circle" style="display:block">
-              <img src="..\html5-boilerplate_v6.1.0\img\circle.png">
+              <img src="img\circle.png">
 
             </div>
         </div>
        <!--  ///////////////////////////////////// -->
         <div class="row full">
             <div class="col-md-31">
-                <img src="../html5-boilerplate_v6.1.0/img/Rectangle.png"  style="margin:20px; width:120px;height:120px">
+                <img src="img/Rectangle.png"  style="margin:20px; width:120px;height:120px">
                 <h2 style="margin:2px">SERVICE<br>TITLE</h2>
                 <p style="margin:20px">Vestassapede et donec ut est libe ros sus et eget sed eget quisq ueta habitur augue </p>
 
             </div>
             <div class="col-md-31">
-                <img src="../html5-boilerplate_v6.1.0/img/Rectangle.png"  style="margin:20px; width:120px;height:120px">
+                <img src="img/Rectangle.png"  style="margin:20px; width:120px;height:120px">
                 <h2 style="margin:2px">SERVICE<br>TITLE</h2>
                 <p style="margin:20px">Vestassapede et donec ut est libe ros sus et eget sed eget quisq ueta habitur augue </p>
 
             </div>
             <div class="col-md-31">
-                <img src="../html5-boilerplate_v6.1.0/img/Rectangle.png"  style="margin:20px; width:120px;height:120px">
+                <img src="img/Rectangle.png"  style="margin:20px; width:120px;height:120px">
                 <h2 style="margin:2px">SERVICE<br>TITLE</h2>
                 <p style="margin:20px">Vestassapede et donec ut est libe ros sus et eget sed eget quisq ueta habitur augue </p>
 
             </div>
             <div class="col-md-31">
-                <img src="../html5-boilerplate_v6.1.0/img/Rectangle.png"  style="margin:20px; width:120px;height:120px">
+                <img src="img/Rectangle.png"  style="margin:20px; width:120px;height:120px">
                 <h2 style="margin:2px">SERVICE<br>TITLE</h2>
                 <p style="margin:20px">Vestassapede et donec ut est libe ros sus et eget sed eget quisq ueta habitur augue </p>
 
@@ -80,18 +80,18 @@
         </div>
         <!-- \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
         <div class="row full">
-          <img src="../html5-boilerplate_v6.1.0/img/LATEST WORK1.png"  style="margin:90px;">
+          <img src="img/LATEST WORK1.png"  style="margin:90px;">
 
             <div class="col-md-4">
-                <img src="../html5-boilerplate_v6.1.0/img/Image.png"  style="margin:20px; width:290px;height:190px">
+                <img src="img/Image.png"  style="margin:20px; width:290px;height:190px">
             </div>
 
             <div class="col-md-4">
-                <img src="../html5-boilerplate_v6.1.0/img/Image.png"  style="margin:20px; width:290px;height:190px">
+                <img src="img/Image.png"  style="margin:20px; width:290px;height:190px">
             </div>
 
             <div class="col-md-4">
-                <img src="../html5-boilerplate_v6.1.0/img/Image.png"  style="margin:20px; width:290px;height:190px">
+                <img src="img/Image.png"  style="margin:20px; width:290px;height:190px">
             </div>
              
              </div>
@@ -100,15 +100,15 @@
              <div class="row full">
 
             <div class="col-md-4">
-                <img src="../html5-boilerplate_v6.1.0/img/Image.png"  style="margin:20px; width:290px;height:190px">
+                <img src="img/Image.png"  style="margin:20px; width:290px;height:190px">
             </div>
 
             <div class="col-md-4">
-                <img src="../html5-boilerplate_v6.1.0/img/Image.png"  style="margin:20px; width:290px;height:190px">
+                <img src="img/Image.png"  style="margin:20px; width:290px;height:190px">
             </div>
 
             <div class="col-md-4">
-                <img src="../html5-boilerplate_v6.1.0/img/Image.png"  style="margin:20px; width:290px;height:190px">
+                <img src="img/Image.png"  style="margin:20px; width:290px;height:190px">
             </div>
              
              </div>
